# blackdocformatter

./: README.md  pyproject.toml
blackdocformatter/: __main__.py
